fix(login): change login vertical align method

--- a/app/assets/stylesheets/app/devise.scss
+++ b/app/assets/stylesheets/app/devise.scss
@@ -11,7 +11,6 @@
   }
 
   &__container {
-    align-items: center;
     background-color: $white;
     background-image: image-url('login-corner-right.svg');
     background-position: right bottom;
@@ -35,6 +34,7 @@
   }
 
   &__form {
+    margin: auto;
     width: 70%;
   }
 
